fix issue where screen height could cause distortions on logo

--- a/src/App.css
+++ b/src/App.css
@@ -239,11 +239,28 @@ canvas {
   width: 100%;
   height: 100vh;
 
+  min-height: 380px;
+
   z-index: 3;
 }
 
 a {
   text-decoration: none;
+}
+
+@media only screen and (max-height: 500px) {
+  .letter {
+    max-height: 245px;
+    max-width: 300px;
+  }
+
+  .LetterL {
+    margin-left: 1.8rem;
+    max-height: 190px !important;
+
+    bottom: 0;
+    position: absolute;
+  }
 }
 
 @media only screen and (min-width: 75em) {
